# iqoption-rs

./: .gitattributes  .gitignore  .rustfmt.toml  .rusty-hook.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml  rust-toolchain
.cargo-husky/hooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: apisec-scan.yml  bump-version.yml  ci.yml  codecov.yml  publish-cargo.yml  publish-crate.yml
examples/: README.md  signin.rs
src/: builder.rs  client.rs  credentials.rs  enviroment.rs  errors.rs  lib.rs  session.rs
src/dtos/: login.rs
