
[package]
name = "iqoption-rs"
version = "0.0.1"
edition = "2021"
categories = ["api-bindings", "automation"]
keywords = ["iq", "option", "rust", "api", "wrapper", "iqoption-rs", "library", "scrapper"]
description = """
A scrapper that abstracts the IQ Option API calls into a Rust package.
"""
exclude = []
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/sydo26/iqoption-rs"
rust-version = "1.70.0"
authors = ["sydo26 <sydoafk@gmail.com>"]

[workspace]
members = ["bin/hooks/*"]

[dependencies]


[dev-dependencies]
rusty-hook = "^0.11.2"
