
[package]
name = "iqoption-rs"
version = "0.0.3"
edition = "2021"
categories = ["api-bindings"]
keywords = ["iqoption", "scrapper", "api", "trading", "automation"]
description = """
A scrapper that abstracts the IQ Option API calls into a Rust package.
"""
include = [
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "src/**/*"
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/sydo26/iqoption-rs"
rust-version = "1.70.0"
authors = ["sydo26 <sydoafk@gmail.com>"]

[workspace]
members = []

[dependencies]
tokio = { version = "1.29.1", features = [
    "test-util",
] }

[dev-dependencies]
rusty-hook = "^0.11.2"
tokio = { version = "1.29.1", features = ["full"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[example]]
name = "signin"
path = "examples/signin.rs"

# Pre commit hook
[[bin]]
name = "pre-commit"
path = "bin/pre-commit.rs"
test = false
bench = false
